--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- Шапка страницы -->
     <header class="main-header">
-      <a class="logo-link" href="/">
+      <a class="logo-link" href="index.html">
         <img class="logo-img" width="140" height="70" src="images/logo.svg" alt="Логотип 'Седоны'">
       </a>
       <nav class="navigation">
