--- a/catalog.html
+++ b/catalog.html
@@ -9,13 +9,13 @@
 
     <!-- Шапка страницы -->
     <header class="main-header">
-      <a class="logo-link" href="/">
+      <a class="logo-link" href="index.html">
         <img class="logo-img" width="140" height="70" src="images/logo.svg" alt="Логотип 'Седоны'">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link" href="/">
+            <a class="navigation-link" href="index.html">
               Главная
             </a>
           </li>
