--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link" href="/">
+            <a class="navigation-link" href="index.html">
               Главная
             </a>
           </li>
