--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <!-- Шапка страницы -->
     <header class="main-header">
       <a class="logo-link" href="index.html">
-        <img class="logo-img" width="140" height="70" src="images/logo.svg" alt="Логотип 'Седоны'">
+        <img class="logo-img" width="140" height="71" src="images/logo.svg" alt="Логотип 'Седоны'">
       </a>
       <nav class="navigation">
-        <ul class="navigation-list">
-          <li class="navigation-item">
+        <ul class="navigation-list links">
+          <li class="navigation-item active-link">
             <a class="navigation-link" href="index.html">
               Главная
             </a>
@@ -63,42 +63,54 @@
       <!-- Секция "преимущества" -->
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества Седоны</h2>
-        <p class="section-header introduction-title">Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</p>
-        <p class="introduction-reason">
-          Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
-        </p>
+        <div class="advantages-reasons">
+          <p class="section-header introduction-title">Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</p>
+          <p class="introduction-reason">
+            Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
+          </p>
+        </div>
         <ul class="advantages-list">
           <li class="advantages-item true-city">
-            <h3 class="advantages-title">Настоящий<br> городок</h3>
-            <p class="advantages-description">
-              Седона — не аттракцион для<br> туристов, там течёт своя<br> жизнь
-            </p>
+            <div class="advantages-content">
+              <h3 class="advantages-title">Настоящий<br> городок</h3>
+              <p class="advantages-description">
+                Седона — не аттракцион для<br> туристов, там течёт своя<br> жизнь
+              </p>
+            </div>
             <img src="images/photo_1.jpg" width="800" height="385" alt="Здание с Американским флагом">
           </li>
           <li class="advantages-item">
-            <h3 class="advantages-title">Небольшая<br> площадь</h3>
-            <p class="advantages-description">
-              Все достопримечательности<br> находятся очень близко
-            </p>
+            <div class="advantages-content">
+              <h3 class="advantages-title">Небольшая<br> площадь</h3>
+              <p class="advantages-description">
+                Все достопримечательности<br> находятся очень близко
+              </p>
+            </div>
           </li>
           <li class="advantages-item">
-            <h3 class="advantages-title">Красивая<br> дорога</h3>
-            <p class="advantages-description">
-              Ехать в Седону из Лас-Вегаса<br> совсем не скучно!
-            </p>
+            <div class="advantages-content">
+              <h3 class="advantages-title">Красивая<br> дорога</h3>
+              <p class="advantages-description">
+                Ехать в Седону из Лас-Вегаса<br> совсем не скучно!
+              </p>
+            </div>
           </li>
           <li class="advantages-item">
-            <h3 class="advantages-title">Мало<br> туристов</h3>
-            <p class="advantages-description">
-              Большинство едет в Гранд<br> Каньон и толпится там
-            </p>
+            <div class="advantages-content">
+              <h3 class="advantages-title">Мало<br> туристов</h3>
+              <p class="advantages-description">
+                Большинство едет в Гранд<br> Каньон и толпится там
+              </p>
+            </div>
           </li>
           <li class="advantages-item bridge">
             <img src="images/photo_2.jpg" width="800" height="385" alt="Скалы">
-            <h3 class="advantages-title">Там есть<br> мост дьявола</h3>
-            <p class="advantages-description">
-              Да, по нему можно пройти!<br> Если вы осмелитесь,<br> разумеется
-            </p>
+            <div class="advantages-content">
+              <h3 class="advantages-title">Там есть<br> мост дьявола</h3>
+              <p class="advantages-description">
+                Да, по нему можно пройти!<br> Если вы осмелитесь,<br> разумеется
+              </p>
+            </div>
           </li>
         </ul>
       </section>
