Сетки страниц на флексах

--- a/catalog.html
+++ b/catalog.html
@@ -192,7 +192,7 @@
         </ol>
         <ul class="pagination">
           <li class="pagination-item">
-            <a class="btn btn-light pagination-link pagination-current">1</a>
+            <a class="btn btn-light pagination-link pagination-current"><span>1</span></a>
           </li>
           <li class="pagination-item">
             <a class="btn btn-blue pagination-link" href="#">2</a>
