Сетки страниц на флексах, исправил переполнения

--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
         <img class="logo-img" width="140" height="71" src="images/logo.svg" alt="Логотип 'Седоны'">
       </a>
       <nav class="navigation">
-        <ol class="navigation-list links">
+        <ul class="navigation-list links">
           <li class="navigation-item">
             <a class="navigation-link" href="index.html">
               Главная
@@ -24,12 +24,12 @@
               О Седоне
             </a>
           </li>
-          <li class="navigation-item active-link">
-            <a class="navigation-link" href="catalog.html">
+          <li class="navigation-item">
+            <a class="navigation-link active-link" href="catalog.html">
               Гостиницы
             </a>
           </li>
-        </ol>
+        </ul>
 
         <ul class="navigation-list action-list">
           <li class="navigation-item">
@@ -44,7 +44,7 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link btn btn-brown" href="#">
+            <a class="navigation-link btn btn-brown btn-sm" href="#">
               Хочу сюда!
             </a>
           </li>
